# dinoFace

./: CMakeLists.txt  README.md  chech.py  g.cpp  main.cpp  train_model.ipynb
gamee/: Background.cpp  Background.h  CMakeLists.txt  Character.cpp  Character.h  Dino.cpp  Dino.h  Level.cpp  Level.h  main.cpp  main.txt
